@@ -540,7 +540,7 @@ else {
 
 	// sorting && paging
 	order_result($data['actions'], $sortField, $sortOrder);
-	$data['paging'] = getPagingLine($data['actions']);
+	$data['paging'] = getPagingLine($data['actions'], $sortOrder);
 
 	// render view
 	$actionView = new CView('configuration.action.list', $data);
