@@ -355,7 +355,7 @@ else {
 	}
 
 	// get paging
-	$data['paging'] = getPagingLine($data['applications']);
+	$data['paging'] = getPagingLine($data['applications'], $sortOrder);
 
 	// render view
 	$applicationView = new CView('configuration.application.list', $data);
