@@ -390,7 +390,7 @@ else {
 
 	order_result($data['items'], $sortField, $sortOrder);
 
-	$data['paging'] = getPagingLine($data['items']);
+	$data['paging'] = getPagingLine($data['items'], $sortOrder);
 
 	// render view
 	$itemView = new CView('configuration.item.prototype.list', $data);
