@@ -472,7 +472,7 @@ if (!$firstEvent) {
 
 	if (!$csvExport) {
 		$events = array();
-		$paging = getPagingLine($events);
+		$paging = getPagingLine($events, ZBX_SORT_UP);
 	}
 }
 else {
@@ -507,7 +507,7 @@ else {
 		));
 		$dsc_events = array_slice($dsc_events, 0, $config['search_limit'] + 1);
 
-		$paging = getPagingLine($dsc_events);
+		$paging = getPagingLine($dsc_events, ZBX_SORT_DOWN);
 
 		if (!$csvExport) {
 			$csvDisabled = zbx_empty($dsc_events);
@@ -698,7 +698,7 @@ else {
 			$events = array_slice($events, 0, $config['search_limit'] + 1);
 
 			// get paging
-			$paging = getPagingLine($events);
+			$paging = getPagingLine($events, ZBX_SORT_DOWN);
 
 			// query event with extend data
 			$events = API::Event()->get(array(
@@ -827,7 +827,7 @@ else {
 		else {
 			if (!$csvExport) {
 				$events = array();
-				$paging = getPagingLine($events);
+				$paging = getPagingLine($events, ZBX_SORT_UP);
 			}
 		}
 	}
